adding API for merchant and team member
