# middleware/auth_req.go
@@ -1,0 +1,63 @@
+package middleware
+
+import (
+	"github.com/gofiber/fiber/v2"
+	"github.com/golang-jwt/jwt"
+	"os"
+	"strconv"
+	"time"
+)
+
+// GetNewAccessToken method for create a new access token.
+// @Description Create a new access token.
+// @Summary create a new access token
+// @Tags Token
+// @Accept json
+// @Produce json
+// @Success 200 {string} status "ok"
+// @Failure 500
+// @Router /api/v1/token/new [get]
+func GetNewAccessToken(c *fiber.Ctx) error {
+	// Generate a new Access token.
+	token, err := generateNewAccessToken()
+	if err != nil {
+		// Return status 500 and token generation error.
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	return c.JSON(fiber.Map{
+		"error":        false,
+		"msg":          nil,
+		"access_token": token,
+	})
+}
+
+func generateNewAccessToken() (string, error) {
+
+	// GenerateNewAccessToken func for generate a new Access token.
+	// Set secret key from .env file.
+	secret := os.Getenv("JWT_SECRET_KEY")
+
+	minutesCount, _ := strconv.Atoi("60")
+
+	// Create a new claims.
+	claims := jwt.MapClaims{}
+
+	// Set public claims:
+	claims["exp"] = time.Now().Add(time.Minute * time.Duration(minutesCount)).Unix()
+
+	// Create a new JWT access token with claims.
+	token := jwt.NewWithClaims(jwt.SigningMethodHS256, claims)
+
+	// Generate token.
+	t, err := token.SignedString([]byte(secret))
+	if err != nil {
+		// Return error, it JWT token generation failed.
+		return "", err
+	}
+
+	return t, nil
+}
